@@ -1,5 +1,8 @@
 2006-12-12  Scott James Remnant  <scott@netsplit.com>
 
+	* init/control.c (control_watcher): Need to save the pid when we
+	get ECONNREFUSED, otherwise we lose it when we free the message.
+
 	* init/tests/test_process.c: Port to the new test framework.
 	* init/init.supp: Suppress the list head allocated within job_init.
 
